Fix contrast

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,16 @@
   --topbar-color: #f0f0f0;
 }
 
+:root.contrast {
+  --primary-color: black;
+  --secondary-color: #808080;
+  --background-color: #f9ebe0;
+  --card-color: #d9d9d9;
+  --placeholder-color: #787878;
+  --disabled-color: #b3b3b3;
+  --topbar-color: #f0f0f0;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   background-color: var(--background-color);
